--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
     <div class="gameContainer">
         <div class="gameInfo">
-            <h1>Tic-tac-toe</h1>
+            <h1>TIC TAC TOE</h1>
             <p class="info">Turn for X</p>
         </div>
         <div class="container">
